--- a/pepeizqs deals web/Pages/Shared/_Layout.cshtml
+++ b/pepeizqs deals web/Pages/Shared/_Layout.cshtml
@@ -88,6 +88,11 @@
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
     <script src="_framework/blazor.server.js" asp-append-version="true"></script>
+    <script asp-append-version="true">
+        window.addEventListener('beforeunload', function () {
+            Blazor.defaultReconnectionHandler.onConnectionDown = _ => { };
+        });
+    </script>
 
     @await RenderSectionAsync("Scripts", required: false)
 </body>
