--- a/pepeizqs deals web/Pages/Shared/_Layout.cshtml
+++ b/pepeizqs deals web/Pages/Shared/_Layout.cshtml
@@ -49,15 +49,18 @@
                         {
                             @if (await UsuarioCoger.RolDios(UserManager, User) == true)
                             {
-                                <li class="nav-item">
-                                    <a class="texto-cabecera" asp-page="/Admin/Juegos/Index">Juegos</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="texto-cabecera" asp-page="/Admin/Tiendas/Index">Tiendas</a>
-                                </li>
                                 <li class="nav-item" style="margin-right: 20px;">
-                                    <a class="texto-cabecera" asp-page="/Admin/Pendientes">Pendientes</a>
+                                    <div class="menu-dropdown">
+                                        <button class="texto-cabecera" style="margin: 0px; border: 0px; color: var(--colorTextoVisitado); line-height: 20px;">Admin</button>
+                                        <div class="menu-dropdown-contenido">
+                                            <a class="texto-cabecera menu-dropdown-item" asp-page="/Admin/Juegos/Index">Juegos</a>
+                                            <a class="texto-cabecera menu-dropdown-item" asp-page="/Admin/Juegos/Añadir">Añadir Juego</a>
+                                            <a class="texto-cabecera menu-dropdown-item" asp-page="/Admin/Tiendas/Index">Tiendas</a>
+                                            <a class="texto-cabecera menu-dropdown-item" asp-page="/Admin/Pendientes">Pendientes</a>
+                                        </div>
+                                    </div>
                                 </li>
+
                             }
                         }
 
@@ -88,11 +91,6 @@
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
     <script src="_framework/blazor.server.js" asp-append-version="true"></script>
-    <script asp-append-version="true">
-        window.addEventListener('beforeunload', function () {
-            Blazor.defaultReconnectionHandler.onConnectionDown = _ => { };
-        });
-    </script>
 
     @await RenderSectionAsync("Scripts", required: false)
 </body>
