--- a/pepeizqs deals web/Pages/Componentes/UltimasOfertas.razor
+++ b/pepeizqs deals web/Pages/Componentes/UltimasOfertas.razor
@@ -2,10 +2,35 @@
 @using Juegos;
 @using Microsoft.Data.SqlClient;
 
+@if (juegosMostrar.Count > 0)
+{
+	<div>
+		@foreach (var juego in juegosMostrar)
+		{
+			<div class="perfil-flexible-centrado" style="margin-top: 10px;">
+				<a class="boton-pequeño" style="padding: 0px;" href="/game/@juego.Id" target="_blank">
+					<div class="perfil-flexible-centrado">
+						<div style="width: 20%;">
+							<img src="@juego.Imagenes.Capsule_231x87" style="max-height:100%; max-width:100%;" />
+						</div>
+
+						<div style="width: 60%; padding: 4px 15px; font-size: 13px;">
+							@juego.Nombre
+						</div>
+
+						<div style="width: 20%; padding: 4px 15px 4px 0px; font-size: 13px; text-align: right;">
+							@Juegos.JuegoFicha.BuscadorMinimo(juego)
+						</div>
+					</div>
+				</a>
+			</div>
+		}
+	</div>
+}
 
 @code {
 
-	List<Juego> juegos = new List<Juego>();
+	List<Juego> juegosMostrar = new List<Juego>();
 
 	protected override async Task OnInitializedAsync()
 	{
@@ -19,27 +44,69 @@
 
 			if (juegos.Count > 0)
 			{
+				//juegos = juegos.OrderBy(x => x.PrecioMinimosHistoricos?.OrderBy(y => y.Precio).Reverse()).ToList();
+
+
+				//juegos.OrderByDescending(x => x.PrecioActualesTiendas.Min(y => y.FechaDetectado))
+				//			.ThenBy(x => x.PrecioActualesTiendas.Min(y => y.Precio))
+				//			.ToList();
+
 				juegos.Sort(delegate (Juego j1, Juego j2)
 				{
-					DateTime j1Fecha = new DateTime(1970, 1, 1, 0, 0, 0, DateTimeKind.Utc);
-					DateTime j2Fecha = new DateTime(1970, 1, 1, 0, 0, 0, DateTimeKind.Utc);
+					List<JuegoPrecio> j1Disponibles = new List<JuegoPrecio>();
 
+					if (j1.PrecioActualesTiendas.Count > 0)
+					{
+						foreach (var drm in JuegoDRM2.GenerarListado())
+						{
+							foreach (var precio in JuegoFicha.OrdenarPrecios(j1.PrecioActualesTiendas, drm.Id, false))
+							{
+								j1Disponibles.Add(precio);
+							}
+						}
+					}
 
+					List<JuegoPrecio> j2Disponibles = new List<JuegoPrecio>();
 
-					string j1Limpio = j1.Nombre;
-					j1Limpio = j1Limpio.Replace("®", null);
-					j1Limpio = j1Limpio.Replace("™", null);
+					if (j2.PrecioActualesTiendas.Count > 0)
+					{
+						foreach (var drm in JuegoDRM2.GenerarListado())
+						{
+							foreach (var precio in JuegoFicha.OrdenarPrecios(j2.PrecioActualesTiendas, drm.Id, false))
+							{
+								j2Disponibles.Add(precio);
+							}
+						}
+					}
 
-					string j2Limpio = j2.Nombre;
-					j2Limpio = j2Limpio.Replace("®", null);
-					j2Limpio = j2Limpio.Replace("™", null);
+					if (j1Disponibles.Count > 0 && j2Disponibles.Count > 0)
+					{
+						return j1Disponibles[0].Precio.CompareTo(j2Disponibles[0].Precio);
+					}
+					else
+					{
+						if (j1Disponibles.Count == 0 && j2Disponibles.Count > 0)
+						{
+							return 1;
+						}
+						else if (j1Disponibles.Count > 0 && j2Disponibles.Count == 0)
+						{
+							return 0;
+						}
+					}
 
-					return j1Limpio.CompareTo(j2Limpio);
+					return 0;
 				});
 
+				int i = 0;
 				foreach (var juego in juegos)
 				{
-					
+					if (i < 50)
+					{
+						juegosMostrar.Add(juego);
+					}
+
+					i += 1;
 				}
 			}
 		}
