--- a/pepeizqs deals web/Pages/Componentes/Pendientes.razor
+++ b/pepeizqs deals web/Pages/Componentes/Pendientes.razor
@@ -1,6 +1,4 @@
-﻿@page "/"
-
-@using Microsoft.AspNetCore.Components.Web;
+﻿@using Microsoft.AspNetCore.Components.Web;
 
 <div class="perfil">
 	<div class="perfil-flexible-centrado">
