--- a/pepeizqs deals web/Pages/Componentes/Portada/UltimosAñadidos.razor
+++ b/pepeizqs deals web/Pages/Componentes/Portada/UltimosAñadidos.razor
@@ -9,10 +9,14 @@
 
 @if (juegosMostrar.Count > 0)
 {
-	<div>
+	<div style="font-size: 20px; margin-bottom: 10px; margin-left: 20px;">
+		Last Added
+	</div>
+
+	<div class="perfil" style="padding: 15px 20px;">
 		@foreach (var juego in juegosMostrar)
 		{
-			<div class="perfil-flexible-centrado" style="margin-top: 10px;">
+			<div class="perfil-flexible-centrado" style="margin-top: 5px; margin-bottom: 5px;">
 				<a class="boton-pequeño" style="padding: 0px;" href="/game/@juego.Id" target="_blank">
 					<div class="perfil-flexible-centrado">
 						<div style="width: 20%;">
@@ -29,12 +33,16 @@
 						</div>
 
 						<div style="width: 20%; padding: 4px 15px 4px 0px; font-size: 13px; text-align: right;">
-							@Juegos.JuegoFicha.BuscadorMinimo(juego)
+							@Juegos.JuegoFicha.MostrarMinimoPrecio(juego, false)
 						</div>
 					</div>
 				</a>
 			</div>
 		}
+
+		<a class="boton-pequeño" style="padding: 10px 15px; margin-top: 20px; margin-bottom: 5px;" href="/LastAdded">
+			Load more added games
+		</a>
 	</div>
 }
 
@@ -59,9 +67,9 @@
 				juegos = juegos.OrderBy(x => x.Id).Reverse().ToList();
 
 				int i = 0;
-				foreach (var juego in juegos)
+				foreach (Juego juego in juegos)
 				{
-					if (i < 50)
+					if (i < 10)
 					{
 						juegosMostrar.Add(juego);
 					}
