--- a/pepeizqs deals web/Pages/Componentes/UltimosAñadidos.razor
+++ b/pepeizqs deals web/Pages/Componentes/UltimosAñadidos.razor
@@ -9,21 +9,17 @@
 
 @if (juegosMostrar.Count > 0)
 {
-	<div style="font-size: 20px; margin-bottom: 10px; margin-left: 20px;">
-		Last Added
-	</div>
-
 	<div class="perfil" style="padding: 15px 20px;">
 		@foreach (var juego in juegosMostrar)
 		{
-			<div class="perfil-flexible-centrado" style="margin-top: 5px; margin-bottom: 5px;">
+			<div class="perfil-flexible-centrado" style="margin-top: 15px; margin-bottom: 15px;">
 				<a class="boton-pequeño" style="padding: 0px;" href="/game/@juego.Id" target="_blank">
 					<div class="perfil-flexible-centrado">
 						<div style="width: 20%;">
 							<img src="@juego.Imagenes.Capsule_231x87" style="max-height:100%; max-width:100%;" />
 						</div>
 
-						<div style="width: 60%; padding: 4px 15px; font-size: 13px;">
+						<div style="width: 60%; padding: 4px 15px;">
 							@juego.Nombre
 
 							@if (BaseDatos.Usuarios.Buscar.RolDios(UserManager.GetUserName(HttpContextAccessor.HttpContext.User)) == true)
@@ -32,17 +28,13 @@
 							}
 						</div>
 
-						<div style="width: 20%; padding: 4px 15px 4px 0px; font-size: 13px; text-align: right;">
-							@Juegos.JuegoFicha.MostrarMinimoPrecio(juego, false)
+						<div style="width: 20%; padding: 4px 30px 4px 0px; text-align: right;">
+							@Juegos.JuegoFicha.MostrarMinimoPrecio(juego, true)
 						</div>
 					</div>
 				</a>
 			</div>
 		}
-
-		<a class="boton-pequeño" style="padding: 10px 15px; margin-top: 20px; margin-bottom: 5px;" href="/LastAdded">
-			Load more added games
-		</a>
 	</div>
 }
 
@@ -50,9 +42,10 @@
 
 	#nullable disable
 
+	List<Juego> juegos = new List<Juego>();
 	List<Juego> juegosMostrar = new List<Juego>();
 
-	protected override void OnInitialized()
+	protected override async Task OnInitializedAsync()
 	{
 		SqlConnection conexion = Herramientas.BaseDatos.Conectar();
 
@@ -60,7 +53,7 @@
 		{
 			conexion.Open();
 
-			List<Juego> juegos = Buscar.Todos(conexion);
+			juegos = Buscar.Todos(conexion);
 
 			if (juegos.Count > 0)
 			{
@@ -69,7 +62,7 @@
 				int i = 0;
 				foreach (Juego juego in juegos)
 				{
-					if (i < 10)
+					if (i < 50)
 					{
 						juegosMostrar.Add(juego);
 					}
