--- a/pepeizqs deals web/Pages/Shared/_Layout.cshtml
+++ b/pepeizqs deals web/Pages/Shared/_Layout.cshtml
@@ -16,7 +16,6 @@
     <link rel="stylesheet" href="~/css/cabecera_cuerpo_pie.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/css/resto.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
-    <link rel="stylesheet" href="~/pepeizqs_deals_web.styles.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/lib/font-awesome/css/all.css" asp-append-version="true" />
 
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
@@ -33,8 +32,8 @@
 </head>
 
 <body class="cuerpo">
-    <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light cabecera">
+    <header class="cabecera">
+        <nav class="navbar navbar-expand-sm navbar-toggleable-sm" style="padding: 0px;">
             <div class="container">
                 <div class="menu-dropdown">
                     <button class="texto-cabecera" style="border: 0px; margin-left: 0px; margin-right: 30px;"><i class="fa-solid fa-bars" style="font-size: 20px; line-height: 40px;"></i></button>
@@ -44,13 +43,13 @@
                     </div>
                 </div>
 
-                <a class="texto-logo" style="line-height: 40px;" asp-area="" asp-page="/Index">pepeizq's deals</a>
+                <a class="texto-logo" asp-area="" asp-page="/Index">pepeizq's deals</a>
 
                 @*Resolucion pequeña*@
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
+@*                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
-                </button>
+                </button> *@
 
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1" style="align-items: center;">
@@ -63,7 +62,7 @@
                                         <button class="texto-cabecera" style="margin: 0px; border: 0px; color: var(--colorTextoVisitado); line-height: 20px;">Admin</button>
                                         <div class="menu-dropdown-contenido">
                                             <a class="texto-cabecera menu-dropdown-item" asp-page="/Admin/Juegos/Añadir">Añadir Juego</a>
-                                            <a class="texto-cabecera menu-dropdown-item" asp-page="/Admin/Tiendas/Index">Tiendas</a>
+                                            <a class="texto-cabecera menu-dropdown-item" asp-page="/Admin/Tiendas">Tiendas</a>
                                             <a class="texto-cabecera menu-dropdown-item" asp-page="/Admin/Pendientes">Pendientes</a>
                                         </div>
                                     </div>
@@ -115,6 +114,19 @@
         //         setInterval(attemptReload, 10000);
         //     }
         // }).observe(document.body, { childList: true, subtree: true });
+    </script>
+
+    <script>
+        var webSocket = new WebSocket("wss://pepeizq-001-site1.ftempurl.com/_blazor");
+        webSocket.onclose = function (event) {
+            if (event.code == 1006) {
+                async function waitAndReload() {
+                    await fetch('');
+                    location.reload(true);
+                }
+                waitAndReload();
+            }
+        };
     </script>
 
     @await RenderSectionAsync("Scripts", required: false)
